fix: resolve RTL layout issues in LESS

--- a/customize.dist/src/less2/pages/page-index.less
+++ b/customize.dist/src/less2/pages/page-index.less
@@ -122,12 +122,21 @@
         border-radius: @infopages-radius-L;
         padding: 15px;
         box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+
+        [dir='rtl'] & {
+            text-align: right;
+        }
         .cp-app-new {
             font-size: 1.4em;
             line-height: 100%;
             color: fade(@cryptpad_text_col, 80%);
             i {
                 margin-right: 5px;
+
+                [dir='rtl'] & {
+                    margin-right: unset;
+                    margin-left: 5px;
+                }
             }
         }
         .cp-app-grid-apps {
@@ -249,6 +258,11 @@
                 color: @cryptpad_color_brand;
                 margin-right: 10px;
                 font-size: 1.3em;
+
+                [dir='rtl'] & {
+                    margin-right: unset;
+                    margin-left: 10px;
+                }
             }
         }
         .cp-sub-prompt {
